[package]
name = "navi"
version = "0.1.0"
authors = ["Andreas Pfeil <andreas.pfeil.rs@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "*"
rocket_contrib = "*"

serde_json = "1"
serde = { version = "1", features = ["derive"] }
serde_derive = "1"